--- a/src/components/Translations/translations.sample.yml
+++ b/src/components/Translations/translations.sample.yml
@@ -9,3 +9,15 @@ fo:
 admin:
   Save: Enregister
   Save and stay: Enregister et rester
+bankwire:
+  prestashop:
+    bankwire:
+      Your settings have been updated.: Vos paramètres ont été mis à jour avec succès.
+      Contact details: Informations de contact
+      The total amount of your order comes to:
+
+# $_MODULE['<{bankwire}prestashop>bankwire_c888438d14855d7d96a2724ee9c306bd'] = 'Your settings have been updated.';
+# $_MODULE['<{bankwire}prestashop>bankwire_5dd532f0a63d89c5af0243b74732f63c'] = 'Contact details';
+# $_MODULE['<{bankwire}prestashop>bankwire_3ec365dd533ddb7ef3d1c111186ce872'] = 'Details';
+# $_MODULE['<{bankwire}prestashop>payment_execution_e2867a925cba382f1436d1834bb52a1c'] = 'The total amount of your order comes to:';
+# $_MODULE['<{bankwire}prestashop>payment_execution_1f87346a16cf80c372065de3c54c86d9'] = '(tax incl.)';
